# Diplom

./: .gitignore  CMakeLists.txt  config.ini
include/: config.h  crawler_utils.h  indexer.h  server_utils.h
src/: config.cpp  crawler_utils.cpp  indexer.cpp  main_crawler.cpp  server.cpp  server_utils.cpp
